# firehorse

./: .gitignore  CC_README.md  CODEX_README.md  CONTRIBUTING.md  LICENSE  REACT_README.md  README.md  RESUM_README.md  pyproject.toml
.github/workflows/: pr-checks.yml  publish-to-pypi.yml
.github/workflows/check-pypi-version-bump/: action.yml
.github/workflows/notify-on-build-failure/: action.yml
firehorse/: __init__.py  cache.py  cli.py  config.py  docker.py  orchestrator.py  providers.py  results.py  resume.py  rollout_replay.py  trial.py  viewer.py
firehorse/agents/: __init__.py  _openrouter_proxy.py  _prompts.py  _subprocess_common.py  base.py  claude_code.py  codex.py  gemini.py  hermes.py  openclaw.py  react.py
firehorse/agents/resum/: __init__.py  agent.py  compaction.py
firehorse/agents/resum/providers/: __init__.py  anthropic_provider.py  base.py  google_provider.py  openai_provider.py  openrouter_provider.py
firehorse/mcp/: __main__.py  bridge.py  builtin_descriptions.py  codex_descriptions.py  convert.py  legacy_builtin_descriptions.py
notes/: AGENT_TYPES.md  CC_README.md  CODEX_README.md  REACT_README.md  RESUM_README.md
tests/: test_builtin_descriptions.py  test_claude_code.py  test_claude_code_integration.py  test_codex.py  test_codex_integration.py  test_convert.py  test_gemini.py  test_openclaw.py  test_react.py  test_resum.py  test_resum_integration.py  test_trial.py
