[project]
name = "firehorse-cli"
version = "0.1.0"
description = "Agent evaluation harness for OpenReward environments"
authors = [
    {name = "GR Inc", email = "hello@gr.inc"}
]

dependencies = [
    "openreward==0.1.97",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
react = [
    "anthropic>=0.40.0",
    "openai>=1.60.0",
    "google-genai>=1.0.0",
]
resum = [
    "anthropic>=0.40.0",
    "openai>=1.60.0",
    "google-genai>=1.0.0",
]

[project.scripts]
firehorse = "firehorse.cli:main"

[tool.setuptools]
packages = { find = { include = ["firehorse", "firehorse.*"] } }

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
