[project]
name = "firehorse-cli"
version = "0.1.3"
readme = "README.md"
description = "Agent evaluation harness for OpenReward environments"
authors = [
    {name = "GR Inc", email = "hello@gr.inc"}
]
requires-python = ">=3.11"

dependencies = [
    # 0.1.127 introduced the typed error hierarchy (openreward.api.errors:
    # ToolFailed / SessionTerminatedError) + session poisoning on tool failure,
    # which firehorse's tool-error handling depends on.
    "openreward>=0.1.127",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
react = [
    "anthropic>=0.95.0",
    "openai>=1.60.0",
    "google-genai>=1.0.0",
]
resum = [
    "anthropic>=0.95.0",
    "openai>=1.60.0",
    "google-genai>=1.0.0",
]

[project.scripts]
firehorse = "firehorse.cli:main"

[tool.setuptools]
packages = { find = { include = ["firehorse", "firehorse.*"] } }

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
